# ComputacionGPU

./: .gitignore  README.md
T1/: .gitignore  CMakeLists.txt  IMPLEMENTACION.md  Matrix.cpp  Matrix.h  README.md  example.cpp
T1/tests/: test_matrix.cpp
T3/: main.cpp  tarea3_interop
T3/implementations/: common.h
T3/implementations/CudaGol/: cudaGol.cu  cudaGol.h  cudaSharedMemGol.cu  cudaSharedMemGol.h
T3/implementations/CudaGol/profilerMod/: cudaProfGol.cu
